calvin/csparser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> script
Rule 1     script -> opt_constdefs opt_compdefs opt_program
Rule 2     empty -> <empty>
Rule 3     opt_constdefs -> constdefs
Rule 4     opt_constdefs -> empty
Rule 5     constdefs -> constdefs constdef
Rule 6     constdefs -> constdef
Rule 7     constdef -> DEFINE identifier EQ argument
Rule 8     opt_compdefs -> compdefs
Rule 9     opt_compdefs -> empty
Rule 10    compdefs -> compdefs compdef
Rule 11    compdefs -> compdef
Rule 12    compdef -> COMPONENT qualified_name LPAREN opt_argnames RPAREN opt_argnames RARROW opt_argnames LBRACE docstring comp_statements RBRACE
Rule 13    docstring -> DOCSTRING
Rule 14    docstring -> empty
Rule 15    comp_statements -> comp_statements comp_statement
Rule 16    comp_statements -> comp_statement
Rule 17    comp_statement -> assignment
Rule 18    comp_statement -> port_property
Rule 19    comp_statement -> internal_port_property
Rule 20    comp_statement -> link
Rule 21    opt_program -> program
Rule 22    opt_program -> empty
Rule 23    program -> program statement
Rule 24    program -> statement
Rule 25    statement -> assignment
Rule 26    statement -> port_property
Rule 27    statement -> link
Rule 28    statement -> define_rule
Rule 29    statement -> group
Rule 30    statement -> apply
Rule 31    assignment -> IDENTIFIER COLON qualified_name LPAREN named_args RPAREN
Rule 32    opt_direction -> LBRACK IDENTIFIER RBRACK
Rule 33    opt_direction -> empty
Rule 34    port_property -> qualified_port opt_direction LPAREN named_args RPAREN
Rule 35    internal_port_property -> unqualified_port opt_direction LPAREN named_args RPAREN
Rule 36    link -> void GT void
Rule 37    link -> real_outport GT void
Rule 38    link -> void GT real_inport_list
Rule 39    link -> real_outport GT inport_list
Rule 40    link -> implicit_outport GT inport_list
Rule 41    link -> internal_outport GT inport_list
Rule 42    void -> VOIDPORT
Rule 43    inport_list -> inport_list COMMA inport
Rule 44    inport_list -> inport
Rule 45    real_inport_list -> inport_list COMMA real_inport
Rule 46    real_inport_list -> real_inport
Rule 47    inport -> real_or_internal_inport
Rule 48    inport -> transformed_inport
Rule 49    transformed_inport -> port_transform real_or_internal_inport
Rule 50    implicit_outport -> argument
Rule 51    implicit_outport -> label argument
Rule 52    real_or_internal_inport -> real_inport
Rule 53    real_or_internal_inport -> internal_inport
Rule 54    opt_tag -> AT tag_value
Rule 55    opt_tag -> empty
Rule 56    tag_value -> NUMBER
Rule 57    tag_value -> STRING
Rule 58    real_inport -> opt_tag qualified_port
Rule 59    real_outport -> qualified_port
Rule 60    internal_inport -> unqualified_port
Rule 61    internal_outport -> unqualified_port
Rule 62    port_transform -> SLASH argument SLASH
Rule 63    port_transform -> SLASH label argument SLASH
Rule 64    qualified_port -> IDENTIFIER DOT IDENTIFIER
Rule 65    unqualified_port -> DOT IDENTIFIER
Rule 66    label -> COLON identifier
Rule 67    named_args -> named_args named_arg COMMA
Rule 68    named_args -> named_args named_arg
Rule 69    named_args -> empty
Rule 70    named_arg -> identifier EQ argument
Rule 71    argument -> value
Rule 72    argument -> identifier
Rule 73    opt_argnames -> argnames
Rule 74    opt_argnames -> empty
Rule 75    argnames -> argnames COMMA IDENTIFIER
Rule 76    argnames -> IDENTIFIER
Rule 77    identifiers -> identifiers COMMA identifier
Rule 78    identifiers -> identifier
Rule 79    identifier -> IDENTIFIER
Rule 80    string -> STRING
Rule 81    string -> string STRING
Rule 82    value -> dictionary
Rule 83    value -> array
Rule 84    value -> bool
Rule 85    value -> null
Rule 86    value -> NUMBER
Rule 87    value -> string
Rule 88    bool -> TRUE
Rule 89    bool -> FALSE
Rule 90    null -> NULL
Rule 91    dictionary -> LBRACE members RBRACE
Rule 92    members -> members member COMMA
Rule 93    members -> members member
Rule 94    members -> empty
Rule 95    member -> string COLON value
Rule 96    values -> values value COMMA
Rule 97    values -> values value
Rule 98    values -> empty
Rule 99    array -> LBRACK values RBRACK
Rule 100   qualified_name -> qualified_name DOT IDENTIFIER
Rule 101   qualified_name -> IDENTIFIER
Rule 102   define_rule -> RULE identifier COLON rule
Rule 103   rule -> rule AND rule
Rule 104   rule -> rule OR rule
Rule 105   rule -> UNOT rule
Rule 106   rule -> LPAREN rule RPAREN
Rule 107   rule -> identifier
Rule 108   rule -> predicate
Rule 109   predicate -> identifier LPAREN named_args RPAREN
Rule 110   apply -> APPLY identifiers COLON rule
Rule 111   group -> GROUP identifier COLON identifiers

Terminals, with rules where they appear

AND                  : 103
APPLY                : 110
AT                   : 54
COLON                : 31 66 95 102 110 111
COMMA                : 43 45 67 75 77 92 96
COMPONENT            : 12
DEFINE               : 7
DOCSTRING            : 13
DOT                  : 64 65 100
EQ                   : 7 70
FALSE                : 89
GROUP                : 111
GT                   : 36 37 38 39 40 41
IDENTIFIER           : 31 32 64 64 65 75 76 79 100 101
LBRACE               : 12 91
LBRACK               : 32 99
LPAREN               : 12 31 34 35 106 109
NULL                 : 90
NUMBER               : 56 86
OR                   : 104
RARROW               : 12
RBRACE               : 12 91
RBRACK               : 32 99
RPAREN               : 12 31 34 35 106 109
RULE                 : 102
SLASH                : 62 62 63 63
STRING               : 57 80 81
TRUE                 : 88
UNOT                 : 105
VOIDPORT             : 42
error                : 

Nonterminals, with rules where they appear

apply                : 30
argnames             : 73 75
argument             : 7 50 51 62 63 70
array                : 83
assignment           : 17 25
bool                 : 84
comp_statement       : 15 16
comp_statements      : 12 15
compdef              : 10 11
compdefs             : 8 10
constdef             : 5 6
constdefs            : 3 5
define_rule          : 28
dictionary           : 82
docstring            : 12
empty                : 4 9 14 22 33 55 69 74 94 98
group                : 29
identifier           : 7 66 70 72 77 78 102 107 109 111
identifiers          : 77 110 111
implicit_outport     : 40
inport               : 43 44
inport_list          : 39 40 41 43 45
internal_inport      : 53
internal_outport     : 41
internal_port_property : 19
label                : 51 63
link                 : 20 27
member               : 92 93
members              : 91 92 93
named_arg            : 67 68
named_args           : 31 34 35 67 68 109
null                 : 85
opt_argnames         : 12 12 12
opt_compdefs         : 1
opt_constdefs        : 1
opt_direction        : 34 35
opt_program          : 1
opt_tag              : 58
port_property        : 18 26
port_transform       : 49
predicate            : 108
program              : 21 23
qualified_name       : 12 31 100
qualified_port       : 34 58 59
real_inport          : 45 46 52
real_inport_list     : 38
real_or_internal_inport : 47 49
real_outport         : 37 39
rule                 : 102 103 103 104 104 105 106 110
script               : 0
statement            : 23 24
string               : 81 87 95
tag_value            : 54
transformed_inport   : 48
unqualified_port     : 35 60 61
value                : 71 95 96 97
values               : 96 97 99
void                 : 36 36 37 38

Parsing method: LALR

state 0

    (0) S' -> . script
    (1) script -> . opt_constdefs opt_compdefs opt_program
    (3) opt_constdefs -> . constdefs
    (4) opt_constdefs -> . empty
    (5) constdefs -> . constdefs constdef
    (6) constdefs -> . constdef
    (2) empty -> .
    (7) constdef -> . DEFINE identifier EQ argument

    COMPONENT       reduce using rule 2 (empty -> .)
    IDENTIFIER      reduce using rule 2 (empty -> .)
    RULE            reduce using rule 2 (empty -> .)
    GROUP           reduce using rule 2 (empty -> .)
    APPLY           reduce using rule 2 (empty -> .)
    VOIDPORT        reduce using rule 2 (empty -> .)
    COLON           reduce using rule 2 (empty -> .)
    DOT             reduce using rule 2 (empty -> .)
    NUMBER          reduce using rule 2 (empty -> .)
    LBRACE          reduce using rule 2 (empty -> .)
    LBRACK          reduce using rule 2 (empty -> .)
    TRUE            reduce using rule 2 (empty -> .)
    FALSE           reduce using rule 2 (empty -> .)
    NULL            reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)
    DEFINE          shift and go to state 6

    script                         shift and go to state 1
    opt_constdefs                  shift and go to state 2
    constdef                       shift and go to state 3
    constdefs                      shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> script .



state 2

    (1) script -> opt_constdefs . opt_compdefs opt_program
    (8) opt_compdefs -> . compdefs
    (9) opt_compdefs -> . empty
    (10) compdefs -> . compdefs compdef
    (11) compdefs -> . compdef
    (2) empty -> .
    (12) compdef -> . COMPONENT qualified_name LPAREN opt_argnames RPAREN opt_argnames RARROW opt_argnames LBRACE docstring comp_statements RBRACE

    IDENTIFIER      reduce using rule 2 (empty -> .)
    RULE            reduce using rule 2 (empty -> .)
    GROUP           reduce using rule 2 (empty -> .)
    APPLY           reduce using rule 2 (empty -> .)
    VOIDPORT        reduce using rule 2 (empty -> .)
    COLON           reduce using rule 2 (empty -> .)
    DOT             reduce using rule 2 (empty -> .)
    NUMBER          reduce using rule 2 (empty -> .)
    LBRACE          reduce using rule 2 (empty -> .)
    LBRACK          reduce using rule 2 (empty -> .)
    TRUE            reduce using rule 2 (empty -> .)
    FALSE           reduce using rule 2 (empty -> .)
    NULL            reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)
    COMPONENT       shift and go to state 8

    compdef                        shift and go to state 7
    opt_compdefs                   shift and go to state 9
    compdefs                       shift and go to state 10
    empty                          shift and go to state 11

state 3

    (6) constdefs -> constdef .

    DEFINE          reduce using rule 6 (constdefs -> constdef .)
    COMPONENT       reduce using rule 6 (constdefs -> constdef .)
    IDENTIFIER      reduce using rule 6 (constdefs -> constdef .)
    RULE            reduce using rule 6 (constdefs -> constdef .)
    GROUP           reduce using rule 6 (constdefs -> constdef .)
    APPLY           reduce using rule 6 (constdefs -> constdef .)
    VOIDPORT        reduce using rule 6 (constdefs -> constdef .)
    COLON           reduce using rule 6 (constdefs -> constdef .)
    DOT             reduce using rule 6 (constdefs -> constdef .)
    NUMBER          reduce using rule 6 (constdefs -> constdef .)
    LBRACE          reduce using rule 6 (constdefs -> constdef .)
    LBRACK          reduce using rule 6 (constdefs -> constdef .)
    TRUE            reduce using rule 6 (constdefs -> constdef .)
    FALSE           reduce using rule 6 (constdefs -> constdef .)
    NULL            reduce using rule 6 (constdefs -> constdef .)
    STRING          reduce using rule 6 (constdefs -> constdef .)
    $end            reduce using rule 6 (constdefs -> constdef .)


state 4

    (3) opt_constdefs -> constdefs .
    (5) constdefs -> constdefs . constdef
    (7) constdef -> . DEFINE identifier EQ argument

    COMPONENT       reduce using rule 3 (opt_constdefs -> constdefs .)
    IDENTIFIER      reduce using rule 3 (opt_constdefs -> constdefs .)
    RULE            reduce using rule 3 (opt_constdefs -> constdefs .)
    GROUP           reduce using rule 3 (opt_constdefs -> constdefs .)
    APPLY           reduce using rule 3 (opt_constdefs -> constdefs .)
    VOIDPORT        reduce using rule 3 (opt_constdefs -> constdefs .)
    COLON           reduce using rule 3 (opt_constdefs -> constdefs .)
    DOT             reduce using rule 3 (opt_constdefs -> constdefs .)
    NUMBER          reduce using rule 3 (opt_constdefs -> constdefs .)
    LBRACE          reduce using rule 3 (opt_constdefs -> constdefs .)
    LBRACK          reduce using rule 3 (opt_constdefs -> constdefs .)
    TRUE            reduce using rule 3 (opt_constdefs -> constdefs .)
    FALSE           reduce using rule 3 (opt_constdefs -> constdefs .)
    NULL            reduce using rule 3 (opt_constdefs -> constdefs .)
    STRING          reduce using rule 3 (opt_constdefs -> constdefs .)
    $end            reduce using rule 3 (opt_constdefs -> constdefs .)
    DEFINE          shift and go to state 6

    constdef                       shift and go to state 12

state 5

    (4) opt_constdefs -> empty .

    COMPONENT       reduce using rule 4 (opt_constdefs -> empty .)
    IDENTIFIER      reduce using rule 4 (opt_constdefs -> empty .)
    RULE            reduce using rule 4 (opt_constdefs -> empty .)
    GROUP           reduce using rule 4 (opt_constdefs -> empty .)
    APPLY           reduce using rule 4 (opt_constdefs -> empty .)
    VOIDPORT        reduce using rule 4 (opt_constdefs -> empty .)
    COLON           reduce using rule 4 (opt_constdefs -> empty .)
    DOT             reduce using rule 4 (opt_constdefs -> empty .)
    NUMBER          reduce using rule 4 (opt_constdefs -> empty .)
    LBRACE          reduce using rule 4 (opt_constdefs -> empty .)
    LBRACK          reduce using rule 4 (opt_constdefs -> empty .)
    TRUE            reduce using rule 4 (opt_constdefs -> empty .)
    FALSE           reduce using rule 4 (opt_constdefs -> empty .)
    NULL            reduce using rule 4 (opt_constdefs -> empty .)
    STRING          reduce using rule 4 (opt_constdefs -> empty .)
    $end            reduce using rule 4 (opt_constdefs -> empty .)


state 6

    (7) constdef -> DEFINE . identifier EQ argument
    (79) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 13

    identifier                     shift and go to state 14

state 7

    (11) compdefs -> compdef .

    COMPONENT       reduce using rule 11 (compdefs -> compdef .)
    IDENTIFIER      reduce using rule 11 (compdefs -> compdef .)
    RULE            reduce using rule 11 (compdefs -> compdef .)
    GROUP           reduce using rule 11 (compdefs -> compdef .)
    APPLY           reduce using rule 11 (compdefs -> compdef .)
    VOIDPORT        reduce using rule 11 (compdefs -> compdef .)
    COLON           reduce using rule 11 (compdefs -> compdef .)
    DOT             reduce using rule 11 (compdefs -> compdef .)
    NUMBER          reduce using rule 11 (compdefs -> compdef .)
    LBRACE          reduce using rule 11 (compdefs -> compdef .)
    LBRACK          reduce using rule 11 (compdefs -> compdef .)
    TRUE            reduce using rule 11 (compdefs -> compdef .)
    FALSE           reduce using rule 11 (compdefs -> compdef .)
    NULL            reduce using rule 11 (compdefs -> compdef .)
    STRING          reduce using rule 11 (compdefs -> compdef .)
    $end            reduce using rule 11 (compdefs -> compdef .)


state 8

    (12) compdef -> COMPONENT . qualified_name LPAREN opt_argnames RPAREN opt_argnames RARROW opt_argnames LBRACE docstring comp_statements RBRACE
    (100) qualified_name -> . qualified_name DOT IDENTIFIER
    (101) qualified_name -> . IDENTIFIER

    IDENTIFIER      shift and go to state 16

    qualified_name                 shift and go to state 15

state 9

    (1) script -> opt_constdefs opt_compdefs . opt_program
    (21) opt_program -> . program
    (22) opt_program -> . empty
    (23) program -> . program statement
    (24) program -> . statement
    (2) empty -> .
    (25) statement -> . assignment
    (26) statement -> . port_property
    (27) statement -> . link
    (28) statement -> . define_rule
    (29) statement -> . group
    (30) statement -> . apply
    (31) assignment -> . IDENTIFIER COLON qualified_name LPAREN named_args RPAREN
    (34) port_property -> . qualified_port opt_direction LPAREN named_args RPAREN
    (36) link -> . void GT void
    (37) link -> . real_outport GT void
    (38) link -> . void GT real_inport_list
    (39) link -> . real_outport GT inport_list
    (40) link -> . implicit_outport GT inport_list
    (41) link -> . internal_outport GT inport_list
    (102) define_rule -> . RULE identifier COLON rule
    (111) group -> . GROUP identifier COLON identifiers
    (110) apply -> . APPLY identifiers COLON rule
    (64) qualified_port -> . IDENTIFIER DOT IDENTIFIER
    (42) void -> . VOIDPORT
    (59) real_outport -> . qualified_port
    (50) implicit_outport -> . argument
    (51) implicit_outport -> . label argument
    (61) internal_outport -> . unqualified_port
    (71) argument -> . value
    (72) argument -> . identifier
    (66) label -> . COLON identifier
    (65) unqualified_port -> . DOT IDENTIFIER
    (82) value -> . dictionary
    (83) value -> . array
    (84) value -> . bool
    (85) value -> . null
    (86) value -> . NUMBER
    (87) value -> . string
    (79) identifier -> . IDENTIFIER
    (91) dictionary -> . LBRACE members RBRACE
    (99) array -> . LBRACK values RBRACK
    (88) bool -> . TRUE
    (89) bool -> . FALSE
    (90) null -> . NULL
    (80) string -> . STRING
    (81) string -> . string STRING

    $end            reduce using rule 2 (empty -> .)
    IDENTIFIER      shift and go to state 39
    RULE            shift and go to state 31
    GROUP           shift and go to state 18
    APPLY           shift and go to state 37
    VOIDPORT        shift and go to state 46
    COLON           shift and go to state 34
    DOT             shift and go to state 35
    NUMBER          shift and go to state 43
    LBRACE          shift and go to state 48
    LBRACK          shift and go to state 52
    TRUE            shift and go to state 25
    FALSE           shift and go to state 51
    NULL            shift and go to state 30
    STRING          shift and go to state 20

    unqualified_port               shift and go to state 17
    argument                       shift and go to state 19
    value                          shift and go to state 21
    apply                          shift and go to state 22
    array                          shift and go to state 23
    null                           shift and go to state 27
    define_rule                    shift and go to state 26
    group                          shift and go to state 28
    dictionary                     shift and go to state 29
    label                          shift and go to state 32
    program                        shift and go to state 33
    bool                           shift and go to state 24
    statement                      shift and go to state 36
    qualified_port                 shift and go to state 38
    opt_program                    shift and go to state 40
    empty                          shift and go to state 41
    string                         shift and go to state 42
    assignment                     shift and go to state 44
    void                           shift and go to state 45
    port_property                  shift and go to state 47
    link                           shift and go to state 49
    internal_outport               shift and go to state 50
    implicit_outport               shift and go to state 53
    real_outport                   shift and go to state 54
    identifier                     shift and go to state 55

state 10

    (8) opt_compdefs -> compdefs .
    (10) compdefs -> compdefs . compdef
    (12) compdef -> . COMPONENT qualified_name LPAREN opt_argnames RPAREN opt_argnames RARROW opt_argnames LBRACE docstring comp_statements RBRACE

    IDENTIFIER      reduce using rule 8 (opt_compdefs -> compdefs .)
    RULE            reduce using rule 8 (opt_compdefs -> compdefs .)
    GROUP           reduce using rule 8 (opt_compdefs -> compdefs .)
    APPLY           reduce using rule 8 (opt_compdefs -> compdefs .)
    VOIDPORT        reduce using rule 8 (opt_compdefs -> compdefs .)
    COLON           reduce using rule 8 (opt_compdefs -> compdefs .)
    DOT             reduce using rule 8 (opt_compdefs -> compdefs .)
    NUMBER          reduce using rule 8 (opt_compdefs -> compdefs .)
    LBRACE          reduce using rule 8 (opt_compdefs -> compdefs .)
    LBRACK          reduce using rule 8 (opt_compdefs -> compdefs .)
    TRUE            reduce using rule 8 (opt_compdefs -> compdefs .)
    FALSE           reduce using rule 8 (opt_compdefs -> compdefs .)
    NULL            reduce using rule 8 (opt_compdefs -> compdefs .)
    STRING          reduce using rule 8 (opt_compdefs -> compdefs .)
    $end            reduce using rule 8 (opt_compdefs -> compdefs .)
    COMPONENT       shift and go to state 8

    compdef                        shift and go to state 56

state 11

    (9) opt_compdefs -> empty .

    IDENTIFIER      reduce using rule 9 (opt_compdefs -> empty .)
    RULE            reduce using rule 9 (opt_compdefs -> empty .)
    GROUP           reduce using rule 9 (opt_compdefs -> empty .)
    APPLY           reduce using rule 9 (opt_compdefs -> empty .)
    VOIDPORT        reduce using rule 9 (opt_compdefs -> empty .)
    COLON           reduce using rule 9 (opt_compdefs -> empty .)
    DOT             reduce using rule 9 (opt_compdefs -> empty .)
    NUMBER          reduce using rule 9 (opt_compdefs -> empty .)
    LBRACE          reduce using rule 9 (opt_compdefs -> empty .)
    LBRACK          reduce using rule 9 (opt_compdefs -> empty .)
    TRUE            reduce using rule 9 (opt_compdefs -> empty .)
    FALSE           reduce using rule 9 (opt_compdefs -> empty .)
    NULL            reduce using rule 9 (opt_compdefs -> empty .)
    STRING          reduce using rule 9 (opt_compdefs -> empty .)
    $end            reduce using rule 9 (opt_compdefs -> empty .)


state 12

    (5) constdefs -> constdefs constdef .

    DEFINE          reduce using rule 5 (constdefs -> constdefs constdef .)
    COMPONENT       reduce using rule 5 (constdefs -> constdefs constdef .)
    IDENTIFIER      reduce using rule 5 (constdefs -> constdefs constdef .)
    RULE            reduce using rule 5 (constdefs -> constdefs constdef .)
    GROUP           reduce using rule 5 (constdefs -> constdefs constdef .)
    APPLY           reduce using rule 5 (constdefs -> constdefs constdef .)
    VOIDPORT        reduce using rule 5 (constdefs -> constdefs constdef .)
    COLON           reduce using rule 5 (constdefs -> constdefs constdef .)
    DOT             reduce using rule 5 (constdefs -> constdefs constdef .)
    NUMBER          reduce using rule 5 (constdefs -> constdefs constdef .)
    LBRACE          reduce using rule 5 (constdefs -> constdefs constdef .)
    LBRACK          reduce using rule 5 (constdefs -> constdefs constdef .)
    TRUE            reduce using rule 5 (constdefs -> constdefs constdef .)
    FALSE           reduce using rule 5 (constdefs -> constdefs constdef .)
    NULL            reduce using rule 5 (constdefs -> constdefs constdef .)
    STRING          reduce using rule 5 (constdefs -> constdefs constdef .)
    $end            reduce using rule 5 (constdefs -> constdefs constdef .)


state 13

    (79) identifier -> IDENTIFIER .

    COLON           reduce using rule 79 (identifier -> IDENTIFIER .)
    EQ              reduce using rule 79 (identifier -> IDENTIFIER .)
    NUMBER          reduce using rule 79 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 79 (identifier -> IDENTIFIER .)
    LBRACE          reduce using rule 79 (identifier -> IDENTIFIER .)
    LBRACK          reduce using rule 79 (identifier -> IDENTIFIER .)
    TRUE            reduce using rule 79 (identifier -> IDENTIFIER .)
    FALSE           reduce using rule 79 (identifier -> IDENTIFIER .)
    NULL            reduce using rule 79 (identifier -> IDENTIFIER .)
    STRING          reduce using rule 79 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 79 (identifier -> IDENTIFIER .)
    RULE            reduce using rule 79 (identifier -> IDENTIFIER .)
    GROUP           reduce using rule 79 (identifier -> IDENTIFIER .)
    APPLY           reduce using rule 79 (identifier -> IDENTIFIER .)
    VOIDPORT        reduce using rule 79 (identifier -> IDENTIFIER .)
    DOT             reduce using rule 79 (identifier -> IDENTIFIER .)
    $end            reduce using rule 79 (identifier -> IDENTIFIER .)
    SLASH           reduce using rule 79 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 79 (identifier -> IDENTIFIER .)
    AND             reduce using rule 79 (identifier -> IDENTIFIER .)
    OR              reduce using rule 79 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 79 (identifier -> IDENTIFIER .)
    GT              reduce using rule 79 (identifier -> IDENTIFIER .)
    DEFINE          reduce using rule 79 (identifier -> IDENTIFIER .)
    COMPONENT       reduce using rule 79 (identifier -> IDENTIFIER .)


state 14

    (7) constdef -> DEFINE identifier . EQ argument

    EQ              shift and go to state 57


state 15

    (12) compdef -> COMPONENT qualified_name . LPAREN opt_argnames RPAREN opt_argnames RARROW opt_argnames LBRACE docstring comp_statements RBRACE
    (100) qualified_name -> qualified_name . DOT IDENTIFIER

    LPAREN          shift and go to state 58
    DOT             shift and go to state 59


state 16

    (101) qualified_name -> IDENTIFIER .

    LPAREN          reduce using rule 101 (qualified_name -> IDENTIFIER .)
    DOT             reduce using rule 101 (qualified_name -> IDENTIFIER .)


state 17

    (61) internal_outport -> unqualified_port .

    GT              reduce using rule 61 (internal_outport -> unqualified_port .)


state 18

    (111) group -> GROUP . identifier COLON identifiers
    (79) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 13

    identifier                     shift and go to state 60

state 19

    (50) implicit_outport -> argument .

    GT              reduce using rule 50 (implicit_outport -> argument .)


state 20

    (80) string -> STRING .

    STRING          reduce using rule 80 (string -> STRING .)
    SLASH           reduce using rule 80 (string -> STRING .)
    COMMA           reduce using rule 80 (string -> STRING .)
    RBRACK          reduce using rule 80 (string -> STRING .)
    NUMBER          reduce using rule 80 (string -> STRING .)
    LBRACE          reduce using rule 80 (string -> STRING .)
    LBRACK          reduce using rule 80 (string -> STRING .)
    TRUE            reduce using rule 80 (string -> STRING .)
    FALSE           reduce using rule 80 (string -> STRING .)
    NULL            reduce using rule 80 (string -> STRING .)
    GT              reduce using rule 80 (string -> STRING .)
    RBRACE          reduce using rule 80 (string -> STRING .)
    DEFINE          reduce using rule 80 (string -> STRING .)
    COMPONENT       reduce using rule 80 (string -> STRING .)
    IDENTIFIER      reduce using rule 80 (string -> STRING .)
    RULE            reduce using rule 80 (string -> STRING .)
    GROUP           reduce using rule 80 (string -> STRING .)
    APPLY           reduce using rule 80 (string -> STRING .)
    VOIDPORT        reduce using rule 80 (string -> STRING .)
    COLON           reduce using rule 80 (string -> STRING .)
    DOT             reduce using rule 80 (string -> STRING .)
    $end            reduce using rule 80 (string -> STRING .)
    RPAREN          reduce using rule 80 (string -> STRING .)


state 21

    (71) argument -> value .

    COMMA           reduce using rule 71 (argument -> value .)
    RPAREN          reduce using rule 71 (argument -> value .)
    IDENTIFIER      reduce using rule 71 (argument -> value .)
    SLASH           reduce using rule 71 (argument -> value .)
    DEFINE          reduce using rule 71 (argument -> value .)
    COMPONENT       reduce using rule 71 (argument -> value .)
    RULE            reduce using rule 71 (argument -> value .)
    GROUP           reduce using rule 71 (argument -> value .)
    APPLY           reduce using rule 71 (argument -> value .)
    VOIDPORT        reduce using rule 71 (argument -> value .)
    COLON           reduce using rule 71 (argument -> value .)
    DOT             reduce using rule 71 (argument -> value .)
    NUMBER          reduce using rule 71 (argument -> value .)
    LBRACE          reduce using rule 71 (argument -> value .)
    LBRACK          reduce using rule 71 (argument -> value .)
    TRUE            reduce using rule 71 (argument -> value .)
    FALSE           reduce using rule 71 (argument -> value .)
    NULL            reduce using rule 71 (argument -> value .)
    STRING          reduce using rule 71 (argument -> value .)
    $end            reduce using rule 71 (argument -> value .)
    GT              reduce using rule 71 (argument -> value .)


state 22

    (30) statement -> apply .

    IDENTIFIER      reduce using rule 30 (statement -> apply .)
    RULE            reduce using rule 30 (statement -> apply .)
    GROUP           reduce using rule 30 (statement -> apply .)
    APPLY           reduce using rule 30 (statement -> apply .)
    VOIDPORT        reduce using rule 30 (statement -> apply .)
    COLON           reduce using rule 30 (statement -> apply .)
    DOT             reduce using rule 30 (statement -> apply .)
    NUMBER          reduce using rule 30 (statement -> apply .)
    LBRACE          reduce using rule 30 (statement -> apply .)
    LBRACK          reduce using rule 30 (statement -> apply .)
    TRUE            reduce using rule 30 (statement -> apply .)
    FALSE           reduce using rule 30 (statement -> apply .)
    NULL            reduce using rule 30 (statement -> apply .)
    STRING          reduce using rule 30 (statement -> apply .)
    $end            reduce using rule 30 (statement -> apply .)


state 23

    (83) value -> array .

    GT              reduce using rule 83 (value -> array .)
    SLASH           reduce using rule 83 (value -> array .)
    COMMA           reduce using rule 83 (value -> array .)
    RBRACK          reduce using rule 83 (value -> array .)
    NUMBER          reduce using rule 83 (value -> array .)
    LBRACE          reduce using rule 83 (value -> array .)
    LBRACK          reduce using rule 83 (value -> array .)
    TRUE            reduce using rule 83 (value -> array .)
    FALSE           reduce using rule 83 (value -> array .)
    NULL            reduce using rule 83 (value -> array .)
    STRING          reduce using rule 83 (value -> array .)
    RPAREN          reduce using rule 83 (value -> array .)
    IDENTIFIER      reduce using rule 83 (value -> array .)
    RBRACE          reduce using rule 83 (value -> array .)
    DEFINE          reduce using rule 83 (value -> array .)
    COMPONENT       reduce using rule 83 (value -> array .)
    RULE            reduce using rule 83 (value -> array .)
    GROUP           reduce using rule 83 (value -> array .)
    APPLY           reduce using rule 83 (value -> array .)
    VOIDPORT        reduce using rule 83 (value -> array .)
    COLON           reduce using rule 83 (value -> array .)
    DOT             reduce using rule 83 (value -> array .)
    $end            reduce using rule 83 (value -> array .)


state 24

    (84) value -> bool .

    GT              reduce using rule 84 (value -> bool .)
    SLASH           reduce using rule 84 (value -> bool .)
    COMMA           reduce using rule 84 (value -> bool .)
    RBRACK          reduce using rule 84 (value -> bool .)
    NUMBER          reduce using rule 84 (value -> bool .)
    LBRACE          reduce using rule 84 (value -> bool .)
    LBRACK          reduce using rule 84 (value -> bool .)
    TRUE            reduce using rule 84 (value -> bool .)
    FALSE           reduce using rule 84 (value -> bool .)
    NULL            reduce using rule 84 (value -> bool .)
    STRING          reduce using rule 84 (value -> bool .)
    RPAREN          reduce using rule 84 (value -> bool .)
    IDENTIFIER      reduce using rule 84 (value -> bool .)
    RBRACE          reduce using rule 84 (value -> bool .)
    DEFINE          reduce using rule 84 (value -> bool .)
    COMPONENT       reduce using rule 84 (value -> bool .)
    RULE            reduce using rule 84 (value -> bool .)
    GROUP           reduce using rule 84 (value -> bool .)
    APPLY           reduce using rule 84 (value -> bool .)
    VOIDPORT        reduce using rule 84 (value -> bool .)
    COLON           reduce using rule 84 (value -> bool .)
    DOT             reduce using rule 84 (value -> bool .)
    $end            reduce using rule 84 (value -> bool .)


state 25

    (88) bool -> TRUE .

    COMMA           reduce using rule 88 (bool -> TRUE .)
    RBRACE          reduce using rule 88 (bool -> TRUE .)
    STRING          reduce using rule 88 (bool -> TRUE .)
    RPAREN          reduce using rule 88 (bool -> TRUE .)
    IDENTIFIER      reduce using rule 88 (bool -> TRUE .)
    GT              reduce using rule 88 (bool -> TRUE .)
    SLASH           reduce using rule 88 (bool -> TRUE .)
    DEFINE          reduce using rule 88 (bool -> TRUE .)
    COMPONENT       reduce using rule 88 (bool -> TRUE .)
    RULE            reduce using rule 88 (bool -> TRUE .)
    GROUP           reduce using rule 88 (bool -> TRUE .)
    APPLY           reduce using rule 88 (bool -> TRUE .)
    VOIDPORT        reduce using rule 88 (bool -> TRUE .)
    COLON           reduce using rule 88 (bool -> TRUE .)
    DOT             reduce using rule 88 (bool -> TRUE .)
    NUMBER          reduce using rule 88 (bool -> TRUE .)
    LBRACE          reduce using rule 88 (bool -> TRUE .)
    LBRACK          reduce using rule 88 (bool -> TRUE .)
    TRUE            reduce using rule 88 (bool -> TRUE .)
    FALSE           reduce using rule 88 (bool -> TRUE .)
    NULL            reduce using rule 88 (bool -> TRUE .)
    $end            reduce using rule 88 (bool -> TRUE .)
    RBRACK          reduce using rule 88 (bool -> TRUE .)


state 26

    (28) statement -> define_rule .

    IDENTIFIER      reduce using rule 28 (statement -> define_rule .)
    RULE            reduce using rule 28 (statement -> define_rule .)
    GROUP           reduce using rule 28 (statement -> define_rule .)
    APPLY           reduce using rule 28 (statement -> define_rule .)
    VOIDPORT        reduce using rule 28 (statement -> define_rule .)
    COLON           reduce using rule 28 (statement -> define_rule .)
    DOT             reduce using rule 28 (statement -> define_rule .)
    NUMBER          reduce using rule 28 (statement -> define_rule .)
    LBRACE          reduce using rule 28 (statement -> define_rule .)
    LBRACK          reduce using rule 28 (statement -> define_rule .)
    TRUE            reduce using rule 28 (statement -> define_rule .)
    FALSE           reduce using rule 28 (statement -> define_rule .)
    NULL            reduce using rule 28 (statement -> define_rule .)
    STRING          reduce using rule 28 (statement -> define_rule .)
    $end            reduce using rule 28 (statement -> define_rule .)


state 27

    (85) value -> null .
